@@ -12,6 +12,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -25,7 +26,7 @@ public class OrderServiceImpl implements OrderService {
     @Override
     public List<OrderDto> getAllOrderDto() {
         return orderRepository.findAll()
-                .stream().map(v -> mapper.map(v, OrderDto.class)).toList();
+                .stream().map(v -> mapper.map(v, OrderDto.class)).collect(Collectors.toList());
     }
 
     @Override
@@ -36,7 +37,7 @@ public class OrderServiceImpl implements OrderService {
     @Override
     public List<OrderDto> getByUserName(String username) {
         return orderRepository.findByUserName(username)
-                .stream().map(v -> mapper.map(v, OrderDto.class)).toList();
+                .stream().map(v -> mapper.map(v, OrderDto.class)).collect(Collectors.toList());
     }
 
     @Override
